# verbose-spork

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  notes.md  notes.txt  sysobj_config.h.cmake
data/: arm.ids  dt.ids  edid.ids  mk_ieee_oui.ids  sdcard.ids  vendor.ids  x86.funfacts
gui/: bp_pin_inspect.c  bp_pin_inspect.h  bp_sysobj_browser.c  bp_sysobj_browser.h  bp_sysobj_search.c  bp_sysobj_search.h  bp_sysobj_view.c  bp_sysobj_view.h  bsysinfo-gtk.c  bsysinfo-gtk.h  gtk_backports.c  uri_handler.c  uri_handler.h
include/: bsysinfo.h  gettext.h  pin.h  sysobj  sysobj.h  term_color.h  util_pci.h  util_usb.h
src/: arm_data.h  bsysinfo.c  class_cpu.c  class_cpucache.c  class_cpufreq.c  class_cpuinfo.c  class_cputopo.c  class_dmi_id.c  class_dt.c  class_pci.c  class_usb.c  classes.c  dtcompattest.c  gettext.c  nametest.c  pin.c  sysobj.c  test_edid.c  test_nice_name.c  test_vendor.c  util_pci.c  util_usb.c  vendortest.c  vo_computer.c
sysobj/include/: appf.h  auto_free.h  cpubits.h  format_funcs.h  gg_file.h  pin.h  sysobj.h  sysobj_collection.h  sysobj_extras.h  sysobj_filter.h  sysobj_foreach.h  sysobj_virt.h  util_dt.h  util_edid.h  util_ids.h  util_pci.h  util_sysobj.h  util_usb.h  vendor.h
sysobj/src/: appf.c  arm_data.c  arm_data.h  arm_lscpu.c  auto_free.c  class_TEMPLATE.c  class_aer.c  class_any_bus.c  class_any_utf8.c  class_backlight.c  class_block.c  class_clocksource.c  class_cpu.c  class_cpucache.c  class_cpufreq.c  class_cpuidle.c  class_cpuinfo.c  class_cputopo.c  class_devfreq.c  class_dmi_id.c  class_dt.c  class_extra.c  class_gpu.c  class_hwmon.c  class_i2c.c  class_intel_pstate.c  class_lookup.c  class_media.c  class_meminfo.c  class_mmc.c  class_mobo.c  class_nvme.c  class_os_release.c  class_pci.c  class_power_supply.c  class_proc_alts.c  class_procs.c  class_rpi.c  class_scsi.c  class_storage.c  (+49 more)
test/: snapshot.sh
uber-graph/: uber-line-graph.h
